// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackBarComponent Renders the default snack bar component 1`] = `
<withTheme(Snackbar)
  duration={5000}
  onDismiss={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#212121",
      "marginBottom": 60,
      "opacity": 0.8,
      "width": "90%",
    }
  }
  visible={false}
>
  
</withTheme(Snackbar)>
`;

exports[`SnackBarComponent Renders the snack bar component with a message 1`] = `
<withTheme(Snackbar)
  duration={5000}
  onDismiss={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#212121",
      "marginBottom": 60,
      "opacity": 0.8,
      "width": "90%",
    }
  }
  visible={true}
>
  [missing "en.GENERICS.UPDATED" translation]
</withTheme(Snackbar)>
`;
